<resources>
    <string name="app_name">Calculator App</string>
    <string name="calc_screen">0</string>
    <string name="clear_entry">CE</string>
    <string name="clear_all">C</string>
    <string name="back_space">BS</string>
    <string name="divide">/</string>
    <string name="multiple">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="dot">.</string>
    <string name="change_positive_negative">+/-</string>
    <string name="calculator_app">Calculator App</string>
</resources>